--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <a href="#">Contact</a>
             </div>
             <div class="icon">
-                <img src="/icon.png" alt="">
+                <img src="icon.png" alt="">
             </div>
         </nav>
         <div class="container">
-            <div class="left"> <img src="/png girl1.png" ></div>
+            <div class="left"> <img src="png girl1.png" ></div>
             <div class="right"> 
                 <p>I am a</p>
                 <h1> Gym Trainer</h1>
@@ -45,13 +45,13 @@
             <p>From Rajsthan.doing gym is good for healthy life.</p>
             <button class="c-btn">Read more</button>
         </div>
-        <div class="about-right-col"><img src="/png3.png"></div>
+        <div class="about-right-col"><img src="png3.png"></div>
     </div>
 </section>
 <section id="signup">
     <div class="signup-row">
         <div class="signup-left-col">
-            <img src="/png men.png">
+            <img src="png men.png">
         </div>
         <div class="signup-right-col">
             <h1> BEING <span id="blue">BODY</span></h1>
@@ -173,7 +173,7 @@
 <section id="footer">
     <h1>BP<span id="blue">FG</span></h1>
     <p>&copy;2022 BPFG, Rajsthan, India</p>
-    <img src="/icon.png">
+    <img src="icon.png">
 </section>
 
 </body>
